--- a/src/app/pages/user-admin/user-admin.component.html
+++ b/src/app/pages/user-admin/user-admin.component.html
@@ -8,45 +8,40 @@
         <div class="author">
           <a href="#">
             <img class="avatar border-gray" src="assets/img/mike.jpg" alt="...">
-            <h5 class="title">Chet Faker</h5>
+            <h5 class="title">Frida Ramirez</h5>
           </a>
-          <p class="description">
-            @chetfaker
-          </p>
         </div>
         <p class="description text-center">
-          "I like the way you work it
-          <br> No diggity
-          <br> I wanna bag it up"
+          "Concéntrate en mejorarte.
+          <br> No en pensar que eres el mejor."
+          <br>
+          <em>
+            Harvey Specter
+          </em>
         </p>
       </div>
       <div class="card-footer">
         <hr>
         <div class="button-container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 col-6 ml-auto">
+            <div class="col-lg-6 col-md-6 col-6 ml-auto">
               <h5>12
                 <br>
-                <small>Files</small>
+                <small>BNEAs Abiertos</small>
               </h5>
             </div>
-            <div class="col-lg-4 col-md-6 col-6 ml-auto mr-auto">
-              <h5>2GB
+            <div class="col-lg-6 col-md-6 col-6 ml-auto mr-auto">
+              <h5>2
                 <br>
-                <small>Used</small>
+                <small>BNEAs Cerrados</small>
               </h5>
             </div>
-            <div class="col-lg-3 mr-auto">
-              <h5>24,6$
-                <br>
-                <small>Spent</small>
-              </h5>
-            </div>
+
           </div>
         </div>
       </div>
     </div>
-    <div class="card">
+    <!-- <div class="card">
       <div class="card-header">
         <h4 class="card-title">Team Members</h4>
       </div>
@@ -116,89 +111,86 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="col-md-8">
     <div class="card card-user">
       <div class="card-header">
-        <h5 class="card-title">Edit Profile</h5>
+        <h5 class="card-title">Editar Perfil</h5>
       </div>
       <div class="card-body">
         <form>
           <div class="row">
-            <div class="col-md-5 pr-1">
+            <div class="col-md-12 pr-1">
               <div class="form-group">
-                <label>Company (disabled)</label>
+                <label>Unidad de negocio</label>
                 <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
               </div>
             </div>
-            <div class="col-md-3 px-1">
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 px-1">
               <div class="form-group">
-                <label>Username</label>
-                <input type="text" class="form-control" placeholder="Username" value="michael23">
+                <label>Nombre</label>
+                <input type="text" class="form-control" placeholder="Username" value="Frida">
               </div>
             </div>
-            <div class="col-md-4 pl-1">
+            <div class="col-md-6 pr-1">
               <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" placeholder="Email">
+                <label>Apellido</label>
+                <input type="text" class="form-control" placeholder="Company" value="Ramirez">
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6 pr-1">
+            <div class="col-md-6 pl-1">
               <div class="form-group">
-                <label>First Name</label>
-                <input type="text" class="form-control" placeholder="Company" value="Chet">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" placeholder="usuario">
               </div>
             </div>
             <div class="col-md-6 pl-1">
               <div class="form-group">
-                <label>Last Name</label>
-                <input type="text" class="form-control" placeholder="Last Name" value="Faker">
+                <label>Numero de empleado</label>
+                <input type="text" class="form-control" placeholder="Numero de empleado" value="A456">
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="form-group">
-                <label>Address</label>
-                <input type="text" class="form-control" placeholder="Home Address" value="Melbourne, Australia">
-              </div>
-            </div>
+
           </div>
           <div class="row">
             <div class="col-md-4 pr-1">
               <div class="form-group">
-                <label>City</label>
-                <input type="text" class="form-control" placeholder="City" value="Melbourne">
+                <label>Area</label>
+                <input type="text" class="form-control" placeholder="Area" value="Ventas">
               </div>
             </div>
             <div class="col-md-4 px-1">
               <div class="form-group">
-                <label>Country</label>
-                <input type="text" class="form-control" placeholder="Country" value="Australia">
+                <label>Subdirección</label>
+                <input type="text" class="form-control" placeholder="Subdirección" value="o.P">
               </div>
             </div>
             <div class="col-md-4 pl-1">
               <div class="form-group">
-                <label>Postal Code</label>
-                <input type="number" class="form-control" placeholder="ZIP Code">
+                <label>Puesto</label>
+                <input type="text" class="form-control" placeholder="Puesto" value="Operaciones">
               </div>
             </div>
+
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="form-group">
-                <label>About Me</label>
-                <textarea
-                  class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
+          <!-- <div class="row">
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label>About Me</label>
+                  <textarea
+                    class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
+                </div>
               </div>
-            </div>
-          </div>
+            </div> -->
           <div class="row">
-            <div class="update ml-auto mr-auto">
-              <button type="submit" class="btn btn-primary btn-round">Update Profile</button>
+            <div class="update ml-auto mr-auto text-end">
+              <button type="submit" class="btn btn-primary btn-round">Actualizar</button>
             </div>
           </div>
         </form>
