--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -28,16 +28,14 @@
           </a>
         </li> -->
         <!-- <li class="nav-item btn-rotate" ngbDropdown placement="bottom-left">
-          <a class="nav-link" ngbDropdownToggle id="navbarDropdownMenuLink" >
+          <a class="nav-link" ngbDropdownToggle id="navbarDropdownMenuLink">
             <i class="nc-icon nc-bell-55"></i>
             <p>
               <span class="d-lg-none d-md-block">Some Actions</span>
             </p>
           </a>
           <div ngbDropdownMenu aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu dropdown-menu-right">
-            <a ngbDropdownItem href="javascript:void(0)">Action</a>
-            <a ngbDropdownItem href="javascript:void(0)">Another action</a>
-            <a ngbDropdownItem href="javascript:void(0)">Something else here</a>
+            <a ngbDropdownItem href="javascript:void(0)">Cerrar Sesion</a>
           </div>
         </li> -->
         <!-- <li class="nav-item">
@@ -57,14 +55,20 @@
             </p>
           </a>
         </li> -->
-        <li style="text-align: end;" class="nav-item btn-rotate" placement="bottom-left">
-          <!-- <a class="nav-link"> -->
-          <!-- <p> -->
-          <span style="color: black;">Frida Ramirez </span>
-          <img style="width: 12%" src="./assets/img/default-avatar.png" alt="" />
-          <!-- </p> -->
-          <!-- </a> -->
+        <li style="text-align: end;" class="nav-item btn-rotate" placement="bottom-left" ngbDropdown>
+          <a style="color: black;" class="nav-link" ngbDropdownToggle id="navbarDropdownMenuLink">
+            Frida Ramirez
+            <!-- <span class="d-lg-none d-md-block" style="color: black;">Frida Ramirez</span> -->
+          </a>
+          <div ngbDropdownMenu aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu dropdown-menu-right">
+            <a ngbDropdownItem (click)="logout()">Cerrar Sesion</a>
+          </div>
+          <!-- <span style="color: black;">Frida Ramirez </span> -->
+
         </li>
+        <!-- <li style="text-align: end;" class="nav-item btn-rotate">
+          <img style="width: 12%" src="./assets/img/default-avatar.png" alt="" />
+        </li> -->
       </ul>
     </div>
   </div>
