--- a/src/app/pages/list-bneas/list-bneas.component.html
+++ b/src/app/pages/list-bneas/list-bneas.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row my-2">
     <div class="col-12 text-end">
-      <span class="hi">Hola Erick</span>
+      <span class="hi">Hola Frida</span>
     </div>
   </div>
   <div class="row">
