--- a/src/app/pages/user-list/user-list.component.css
+++ b/src/app/pages/user-list/user-list.component.css
@@ -61,6 +61,54 @@
   letter-spacing: normal;
   color: rgba(0, 0, 0, 0.51);
 }
+.BNEAs {
+  font-family: Montserrat;
+  color: rgba(29, 29, 27, 0.8);
+  font-size: 1.5rem;
+  font-weight: 900;
+}
+
+.entry {
+  font-size: 1.35rem;
+  font-family: Roboto;
+  color: rgba(29, 29, 27, 0.8);
+}
+
+.create-BNEAs {
+  font-family: Montserrat;
+  font-size: 0.825rem;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.header-table {
+  color: #1d1d1b;
+  text-transform: uppercase;
+  font-family: Roboto;
+  text-align: left;
+}
+
+.id-table {
+  font-family: Roboto;
+  font-size: 1rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #1d1d1b;
+}
+
+.info-table {
+  font-family: Roboto;
+  font-size: 1rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: rgba(0, 0, 0, 0.51);
+}
 .input-style {
   font-family: Roboto;
   font-size: 0.875rem;
