--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -6,20 +6,18 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-8 text-start">
-      <span class="BNEAs">BNEAs</span>
+      <span class="BNEAs">Lista de Usuarios</span>
     </div>
     <div class="col-12 col-md-4 text-end">
-      <span class="welcome">Bienvenida a tu espacio. Aquí podrás ingresar nuevos BNEAs o recuperar información de BNEAs
-        pasados.</span>
+      <span class="welcome">Bienvenida a tu espacio. Aquí podrás crear y actualizar usuarios.</span>
     </div>
   </div>
   <!-- filtros -->
   <div class="row my-4">
     <div class="col-4">
       <div class="form-floating mb-3">
-        <input type="text" class="form-control input-style" id="idBnea"
-          placeholder="Buscar">
-        <label for="idBnea">Buscar (id, nombre)</label>
+        <input type="text" class="form-control input-style" id="sear" placeholder="Buscar">
+        <label for="sear">Buscar</label>
       </div>
     </div>
     <div class="col-4">
@@ -34,7 +32,7 @@
       </div>
     </div>
     <div class="col-4">
-      <!-- <div class="form-floating mb-3">
+      <div class="form-floating mb-3">
         <select class=" selectStyle form-select input-style" id="subdireccion" aria-label="Subdirección">
           <option selected>Elige una subdirección</option>
           <option value="1">subdireccion 1</option>
@@ -42,15 +40,15 @@
           <option value="3">subdireccion 3</option>
         </select>
         <label for="subdireccion">Subdirección</label>
-      </div> -->
+      </div>
     </div>
   </div>
   <div class="row mt-3 mb-1">
     <div class="col-6 text-start">
-      <span class="entry">Mis entradas</span>
+      <!-- <span class="entry">Mis entradas</span> -->
     </div>
     <div class="col-6 text-end">
-      <span (click)="createBNEAs()" class="create-BNEAs">Crear nuevo BNEA
+      <span (click)="createUser(0)" class="create-BNEAs">Crear Usuario
         <button title="Crear BNEAs" class="btn btn-sm btn-info btn-round btn-icon">
           <i style="cursor: pointer; font-size: 1rem;" class="bi bi-plus text-warning"></i>
         </button>
@@ -67,39 +65,30 @@
             <thead class="header-table">
               <tr>
                 <th scope="col-1"></th>
-                <th scope="col-1">ID</th>
-                <th scope="col-2">Area</th>
-                <th scope="col-1">Iniciativa</th>
-                <th scope="col-2">Nombre</th>
-                <th scope="col-1">XLS</th>
-                <th scope="col-1">DOC</th>
-                <th scope="col-1">Porcentage</th>
-                <th scope="col-2">Acciones</th>
+                <th scope="col-3">Nombre</th>
+                <th scope="col-2">Email</th>
+                <th scope="col-2"># Empleado</th>
+                <th scope="col-1">Area</th>
+                <th scope="col-1">Subdirección</th>
+                <th scope="col-1">Puesto</th>
+                <th scope="col-1">Acciones</th>
               </tr>
             </thead>
             <tbody class="text-center">
-              <tr *ngFor="let item of [1,1,1,1,1,1,1,1]">
+              <tr *ngFor="let item of [1,1,1,1,1,1]">
                 <td><span><img src="./assets/icon/id-coppel.svg" alt="Bootstrap" width="40" height="40"></span>
                 </td>
-                <th class="id-table" scope="row">B004230</th>
-                <td class="info-table">Operaciones / Aclaraciones</td>
-                <td class="info-table">RPA</td>
-                <td class="info-table">Fernanda Orea</td>
-                <td class="info-table"><span>
-                    <img src="./assets/icon/doc-excel.svg" alt="Bootstrap" width="40" height="40">
-                    <img src="./assets/icon/icon-pendiente.png" alt="Bootstrap" width="15" height="15">
-                  </span>
-                </td>
-                <td class="info-table"><span>
-                    <img src="./assets/icon/doc-word.svg" alt="Bootstrap" width="40" height="40">
-                    <img src="./assets/icon/icon_asisti.png" alt="Bootstrap" width="15" height="15">
-                  </span></td>
-                <td class="info-table">100%</td>
+                <th class="id-table" scope="row">Frida Ramirez</th>
+                <td class="info-table">frida@usuario.com</td>
+                <td class="info-table">A23F1</td>
+                <td class="info-table">Recursos Humanos</td>
+                <td class="info-table">Nomina</td>
+                <td class="info-table">Test</td>
                 <td>
-                  <span class="m-2">
+                  <span class="m-2" (click)="createUser(1)">
                     <i style="cursor: pointer; font-size: 1.3rem;" class="bi bi-pencil text-info"></i>
                   </span>
-                  <span class="m-2">
+                  <span class="m-2" (click)="createUser(1)">
                     <i style="cursor: pointer; font-size: 1.3rem;" class="bi bi-trash text-danger"></i>
                   </span>
                 </td>
