--- a/src/app/pages/auth/login/login.component.css
+++ b/src/app/pages/auth/login/login.component.css
@@ -98,3 +98,7 @@
   margin-right: 1.8rem !important;
   margin-left: 1.8rem !important;
 }
+.icon-login {
+  color: #000000;
+  background-color: white;
+}
