--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -29,11 +29,14 @@
         </div>
       </div>
       <div class="input-group mb-3">
-        <input type="password" autocomplete="off" [(ngModel)]="password" class="form-control input-style text-center"
+        <input type="{{typeInput}}" autocomplete="off" [(ngModel)]="password" class="form-control input-style text-center"
           placeholder="Contraseña" aria-describedby="basic-addon2" />
         <div class="input-group-append">
           <span style="background-color: white;" class="input-group-text">
-            <i style=" color: #000000; background-color: white;" class="nc-icon nc-key-25"></i>
+            <i class="bi bi-key icon-login" *ngIf="password === '' || password === undefined"></i>
+            <!-- <i class="nc-icon nc-key-25 icon-login"></i> -->
+            <i class="bi bi-eye icon-login" *ngIf="(password !== '' && password !== undefined) && eyed === true" (click)="viewPassword(false)"></i>
+            <i class="bi bi-eye-slash icon-login" *ngIf="(password !== '' && password !== undefined) && eyed === false" (click)="viewPassword(true)"></i>
           </span>
         </div>
       </div>
@@ -45,7 +48,7 @@
 
       <div class="my-1 text-center ">
         <!-- [disabled]="email == '' || password == '' || disabled == true" -->
-        <button [disabled]="email == '' || password == '' || disabled == true" (click)="entrar()" type="button"
+        <button [disabled]="email == '' || password == '' || disabled == true" (click)="login(email, password)" type="button"
           class="btn btn-info btn-entrar">
           <!-- (click)="login(email, password)" -->
           <span class="text-warning text-btn">
