--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -37,7 +37,7 @@
             <div class="logo text-center">
               <!-- [disabled]="email === ''"
                 (click)="sforgot(email)" -->
-              <button type="button" class="btn btn-info btn-entrar">
+              <button (click)="forgot(email)" [disabled]="email === '' || email=== undefined" type="button" class="btn btn-info btn-entrar">
                 <!-- (click)="login(email, password)" -->
                 <span class="text-warning text-btn">
                   Enviar
