--- a/src/app/pages/list-bneas-admin/list-bneas-admin.component.html
+++ b/src/app/pages/list-bneas-admin/list-bneas-admin.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row my-2">
     <div class="col-12 text-end">
-      <span class="hi">Hola Admin</span>
+      <span class="hi">Hola {{user.name}}</span>
     </div>
   </div>
   <div class="row">
@@ -78,13 +78,13 @@
               </tr>
             </thead>
             <tbody class="text-center">
-              <tr *ngFor="let item of [1,1,1,1,1,1,1,1]">
+              <tr *ngFor="let item of data">
                 <td><span><img src="./assets/icon/id-coppel.svg" alt="Bootstrap" width="40" height="40"></span>
                 </td>
-                <th class="id-table" scope="row">B004230</th>
-                <td class="info-table">Operaciones / Aclaraciones</td>
+                <th class="id-table" scope="row">B00{{item.id}}</th>
+                <td class="info-table">{{getName(item.area)}}</td>
                 <td class="info-table">RPA</td>
-                <td class="info-table">Fernanda Orea</td>
+                <td class="info-table">{{item.nombre}}</td>
                 <td class="info-table"><span>
                     <img src="./assets/icon/doc-excel.svg" alt="Bootstrap" width="40" height="40">
                     <img src="./assets/icon/icon-pendiente.png" alt="Bootstrap" width="15" height="15">
@@ -94,7 +94,7 @@
                     <img src="./assets/icon/doc-word.svg" alt="Bootstrap" width="40" height="40">
                     <img src="./assets/icon/icon_asisti.png" alt="Bootstrap" width="15" height="15">
                   </span></td>
-                <td class="info-table">100%</td>
+                <td class="info-table">{{item.porcentaje}}%</td>
                 <td>
                   <span class="m-2">
                     <i style="cursor: pointer; font-size: 1.3rem;" class="bi bi-pencil text-info"></i>
