--- a/src/app/pages/user-admin/user-admin.component.html
+++ b/src/app/pages/user-admin/user-admin.component.html
@@ -6,17 +6,15 @@
       </div>
       <div class="card-body">
         <div class="author">
-          <a href="#">
-            <img class="avatar border-gray" src="assets/img/mike.jpg" alt="...">
-            <h5 class="title">Frida Ramirez</h5>
-          </a>
+          <img class="avatar border-gray" src="assets/image/avatar.jpg" alt="...">
+          <h5 class="title">{{data.name}}</h5>
         </div>
         <p class="description text-center">
           "Concéntrate en mejorarte.
           <br> No en pensar que eres el mejor."
           <br>
           <em>
-            Harvey Specter
+            -Harvey Specter
           </em>
         </p>
       </div>
@@ -122,76 +120,103 @@
         <form>
           <div class="row">
             <div class="col-md-12 pr-1">
-              <div class="form-group">
-                <label>Unidad de negocio</label>
-                <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
+              <div class="form-floating mb-3">
+                <select name="unidadNegocio" class="form-select input-style" id="unidadNegocio"
+                  aria-label="Tipo de BNEA" [(ngModel)]="data.idBusinessUnit"
+                  style="border: 1px solid #fff !important;">
+                  <option selected>Elige una tipo</option>
+                  <option *ngFor="let item of catBussinessUnit" [value]="item.id">{{item.businessUnit}}</option>
+                </select>
+                <label for="unidadNegocio">Unidad de negocio</label>
               </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-6 px-1">
+            <div class="col-md-12 px-1">
               <div class="form-group">
-                <label>Nombre</label>
-                <input type="text" class="form-control" placeholder="Username" value="Frida">
+                <label for="nombre">Nombre</label>
+                <input name="nombre" id="nombre" [(ngModel)]="data.name" type="text" class="form-control"
+                  placeholder="Username">
               </div>
             </div>
-            <div class="col-md-6 pr-1">
-              <div class="form-group">
-                <label>Apellido</label>
-                <input type="text" class="form-control" placeholder="Company" value="Ramirez">
-              </div>
-            </div>
+            <!-- <div class="col-md-6 pr-1">
+                    <div class="form-group">
+                      <label>Apellido</label>
+                      <input type="text" class="form-control" placeholder="Company" value="Ramirez">
+                    </div>
+                  </div> -->
           </div>
           <div class="row">
             <div class="col-md-6 pl-1">
               <div class="form-group">
-                <label for="exampleInputEmail1">Email</label>
-                <input type="email" class="form-control" placeholder="usuario">
+                <label for="email">Email</label>
+                <input name="email" disabled [(ngModel)]="data.email" type="email" class="form-control"
+                  placeholder="usuario" id="email">
               </div>
             </div>
             <div class="col-md-6 pl-1">
               <div class="form-group">
-                <label>Numero de empleado</label>
-                <input type="text" class="form-control" placeholder="Numero de empleado" value="A456">
+                <label for="empleado">Numero de empleado</label>
+                <input id="empleado" name="empleado" [(ngModel)]="data.noEmployee" type="text" class="form-control"
+                  placeholder="Numero de empleado">
               </div>
             </div>
 
           </div>
           <div class="row">
             <div class="col-md-4 pr-1">
-              <div class="form-group">
-                <label>Area</label>
-                <input type="text" class="form-control" placeholder="Area" value="Ventas">
+              <div class="form-floating mb-3">
+                <select name="area" class="form-select input-style" id="area" aria-label="Tipo de Area"
+                  [(ngModel)]="data.idArea" style="border: 1px solid #fff !important;">
+                  <option selected>Elige una Area</option>
+                  <option *ngFor="let item of catArea" [value]="item.id">{{item.area}}</option>
+                </select>
+                <label for="area">Area</label>
               </div>
             </div>
             <div class="col-md-4 px-1">
-              <div class="form-group">
-                <label>Subdirección</label>
-                <input type="text" class="form-control" placeholder="Subdirección" value="o.P">
+              <div class="form-floating mb-3">
+                <select name="Subdirección" class="form-select input-style" id="Subdirección"
+                  aria-label="Tipo de Subdirección" [(ngModel)]="data.idSubDivision"
+                  style="border: 1px solid #fff !important;">
+                  <option selected>Elige una Subdirección</option>
+                  <option *ngFor="let item of catSubDivision" [value]="item.id">{{item.subDivision}}</option>
+
+                </select>
+                <label for="Subdirección">Subdirección</label>
               </div>
             </div>
             <div class="col-md-4 pl-1">
               <div class="form-group">
-                <label>Puesto</label>
-                <input type="text" class="form-control" placeholder="Puesto" value="Operaciones">
+                <label for="puesto">Puesto</label>
+                <input id="puesto" name="puesto" [(ngModel)]="data.employeePosition" type="text" class="form-control"
+                  placeholder="Puesto">
               </div>
             </div>
 
           </div>
           <!-- <div class="row">
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label>About Me</label>
-                  <textarea
-                    class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
-                </div>
-              </div>
-            </div> -->
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label>About Me</label>
+                      <textarea
+                        class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
+                    </div>
+                  </div>
+                </div> -->
           <div class="row">
-            <div class="update ml-auto mr-auto text-end">
-              <button type="submit" class="btn btn-primary btn-round">Actualizar</button>
+            <div class="col-12 col-md-6 change_pass">
+              <div (click)="changePassword(data.email)">
+                <span class="text-primary">Cambiar Contraseña</span>
+              </div>
             </div>
+            <div class="col-12 col-md-6">
+              <div class="update ml-auto mr-auto text-end">
+                <button (click)="update()" type="submit" class="btn btn-primary btn-round">Actualizar</button>
+              </div>
+            </div>
+
           </div>
         </form>
       </div>
