--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -124,8 +124,8 @@
                 <select name="unidadNegocio" class="form-select input-style" id="unidadNegocio"
                   aria-label="Tipo de BNEA" [(ngModel)]="data.idBusinessUnit"
                   style="border: 1px solid #fff !important;">
-                  <option selected>Elige una tipo</option>
-                  <option *ngFor="let item of catBussinessUnit" [value]="item.id">{{item.businessUnit}}</option>
+                  <option disabled selected>Elige una opción</option>
+                  <option *ngFor="let item of catBussinessUnit" [value]="item.id">{{item.empresa}}</option>
                 </select>
                 <label for="unidadNegocio">Unidad de negocio</label>
               </div>
