--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -12,7 +12,7 @@
       <img src="./assets/logo-login.png" alt="Rebel wings" />
     </div>
     <div class="mt-4 mb-3">
-      <span class="title-admon">Bienvenido a<span class="portalBNEAs"> tu portal BNEA,</span> Aquí podrás obtener los
+      <span class="title-admon">Bienvenid@ a<span class="portalBNEAs"> tu portal BNEA.</span> <br> Aquí podrás obtener los
         documentos requeridos en el banco de manera rápida y automática.</span>
     </div>
     <div class="mb-2">
