--- a/src/app/pages/auth/welcome/welcome.component.html
+++ b/src/app/pages/auth/welcome/welcome.component.html
@@ -14,7 +14,7 @@
       <div class="col-12 logo mt-4">
         <span class="text-white welcome">
           <b>
-            BIENVENIDO
+            BIENVENID@
           </b>
           
         </span>
