--- a/src/app/pages/create-bnea/create-bnea.component.css
+++ b/src/app/pages/create-bnea/create-bnea.component.css
@@ -55,7 +55,9 @@
 .select-step {
   border: 1px solid #fff !important;
 }
-
+.alin-center {
+  /* align-self: center; */
+}
 .parag-step {
   font-family: Roboto;
   font-size: 0.975rem;
