--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -9,7 +9,7 @@
       <span class="BNEAs">Lista de Usuarios</span>
     </div>
     <div class="col-12 col-md-4 text-end">
-      <span class="welcome">Bienvenida a tu espacio. Aquí podrás crear y actualizar usuarios.</span>
+      <span class="welcome">Bienvenid@ a tu espacio. Aquí podrás crear y actualizar usuarios.</span>
     </div>
   </div>
   <!-- filtros -->
