--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
     <div class="col-12" (click)="iniciarSesion()">
       <div class="mt-3">
         <p class="ion-align-items-start returnLogin">
-          < Iniciar session</p>
+          < Iniciar sessión</p>
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
           <input type="email" [(ngModel)]="email" class="form-control input-style text-center" placeholder="Correo electrónico o usuario"
             aria-label="Correo electrónico o usuario" aria-describedby="basic-addon2" />
           <div class="input-group-append">
-            ,
+            
             <span style="background-color: white;" class="input-group-text">
               <i style="color: #000000; background-color: white;" class="nc-icon nc-email-85"></i>
               <!-- <ion-icon color="danger" name="mail-outline"></ion-icon> -->
