--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -67,7 +67,7 @@
     <div class="card ">
       <div class="card-header ">
         <h5 class="card-title">Entradas</h5>
-        <p class="card-category">Numero total de entradas por empresa</p>
+        <p class="card-category">Número total de entradas por empresa</p>
       </div>
       <div class="card-body ">
         <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="totalEntradas" [gradient]="gradient"
