--- a/src/app/pages/list-bneas/list-bneas.component.html
+++ b/src/app/pages/list-bneas/list-bneas.component.html
@@ -9,7 +9,7 @@
       <span class="BNEAs">BNEAs</span>
     </div>
     <div class="col-12 col-md-4 text-end">
-      <span class="welcome">Bienvenida a tu espacio. Aquí podrás ingresar nuevos BNEAs o recuperar información de BNEAs
+      <span class="welcome">Bienvenid@ a tu espacio. Aquí podrás ingresar nuevos BNEAs o recuperar información de BNEAs
         pasados.</span>
     </div>
   </div>
@@ -68,10 +68,16 @@
                       <img src="./assets/icon/icon_asisti.png" alt="Bootstrap" width="15" height="15">
                     </span>
                   </td>
-                  <td class="info-table"><span (click)="word(item.id)">
+                  <td class="info-table">
+                    <span *ngIf="item.porcentaje == '100'" (click)="word(item.id)">
+                      <img   src="./assets/icon/doc-word.svg" alt="Bootstrap" width="40" height="40">
+                      <img    src="./assets/icon/icon_asisti.png" alt="Bootstrap" width="15" height="15">
+                    </span>
+                     <span *ngIf="item.porcentaje != '100'">
                       <img src="./assets/icon/doc-word.svg" alt="Bootstrap" width="40" height="40">
-                      <img src="./assets/icon/icon_asisti.png" alt="Bootstrap" width="15" height="15">
-                    </span></td>
+                      <img    src="./assets/icon/icon-pendiente.png" alt="Bootstrap" width="15" height="15">
+                    </span>
+                  </td>
                   <td class="info-table">{{item.porcentaje}}%</td>
                   <td>
                     <span class="m-2" (click)="createBNEAs(item.id)">
