--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -157,9 +157,9 @@
             </div>
             <div class="col-md-6 pl-1">
               <div class="form-group">
-                <label for="empleado">Numero de empleado</label>
+                <label for="empleado">Número de empleado</label>
                 <input id="empleado" name="empleado" [(ngModel)]="data.noEmployee" type="text" class="form-control"
-                  placeholder="Numero de empleado">
+                  placeholder="Número de empleado">
               </div>
             </div>
 
